# CrowServer

./: CMakeLists.txt  README.md  db_setup.sql  main.cpp  mock_data.sql
backend/: CMakeLists.txt
backend/include/backend/: AuthMiddlware.hpp  Handlers.hpp  Queries.hpp  Token.hpp  psql.hpp
backend/src/: Handlers.cpp  Token.cpp  psql.cpp
